# aws_s3_hook_lambda

./: .gitignore  Makefile  README.md  log.txt
docs/: LambdaDeploymentPackage.md  Lambda_with_S3.md
infra/: package-lock.json  package.json
infra/lib/: infra-stack.ts
infra/lib/lambda/cnvFile/: index.py
lib/: infra-stack.ts
lib/lambda/cnvFile/: Dockerfile  Makefile  README.md  build_deployment_package.sh  build_dockerfile.sh  build_dockerfile_by_DinD.sh  build_dockerfile_by_DooD.sh  build_with_docker.sh  calculation.py  clean.sh  docker_build.sh  docker_cp.sh  docker_rmi.sh  docker_run_with_console.sh  index.py  pyproject.toml  requirements.txt  requirements2.txt  test.py  tmp
lib/lambda/cnvFile/deployment_package_build_env/: clean_docker.sh
lib/lambda/cnvFile/docker_sh/: cname2cid.sh  rmi.sh  run_DinD.sh  sleep_until_docker_deamon_to_be_ready.sh  sleep_until_server_starts.sh
lib/lambda/cnvFile/docker_sh/for_check_the_docker_deamon_running/: Dockerfile
lib/lambda/cnvFile/test_env/: Dockerfile  build_dockerfile.sh  calculation.py  clean_docker.sh  index.py  pyproject.toml  run_docker.sh  test.py  test.sh
